update to Java 17, rework some of the patterns