@@ -3,25 +3,33 @@ package observer;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.regex.Pattern;
-import java.util.stream.Stream;
 
 public interface observer2 {
-  public class SumCSV {
-    public static double parseAndSum(Path path) throws IOException {
-      try (Stream<String> lines = Files.lines(path)) {
-        return lines
+  interface Observer {
+    void data(double value);
+  }
+  
+  class CSVParser {
+    public static void parse(Path path, Observer observer) throws IOException {
+      try (var lines = Files.lines(path)) {
+        lines
             .flatMap(Pattern.compile(",")::splitAsStream)
             .mapToDouble(Double::parseDouble)
-            .sum();
+            .forEach(observer::data);
       }
     }
   }
+
+  static double parseAndSum(Path path) throws IOException {
+    var box = new Object() { int sum; };
+    CSVParser.parse(path, value -> box.sum += value);
+    return box.sum;
+  }
   
-  public static void main(String[] args) throws IOException {
-    Path path = Paths.get("test/test.csv");
-    double value = SumCSV.parseAndSum(path);
+  static void main(String[] args) throws IOException {
+    var path = Path.of("test/test.csv");
+    var value = parseAndSum(path);
     System.out.println(value);
   }
 }
